--- a/cake.html
+++ b/cake.html
@@ -7,15 +7,9 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="d-flex flex-column justify-content-center align-items-center text-center min-vh-100">
-
-  <!-- Background Music -->
-  <audio id="birthday-audio" loop>
-    <source src="birthday.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-
+<body class="d-flex flex-column justify-content-center align-items-center text-center min-vh-
   <!-- Pink Sakura petals -->
+  <audio src="birthday.mp3" autoplay loop></audio>
   <div class="sakura">
     <div class="petal pink"></div>
     <div class="petal pink"></div>
@@ -89,3 +83,4 @@
   </script>
 </body>
 </html>
+
