--- a/cake.html
+++ b/cake.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Happy Birthday Antonete</title>
-  <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="d-flex flex-column justify-content-center align-items-center text-center min-vh-
-  <!-- Pink Sakura petals -->
+<body class="d-flex flex-column justify-content-center align-items-center text-center min-vh-100">
 
+  <!-- Pink Sakura petals -->
   <div class="sakura">
     <div class="petal pink"></div>
     <div class="petal pink"></div>
@@ -37,6 +36,7 @@
     <div class="petal red"></div>
   </div>
 
+  <!-- Cake and Birthday Message -->
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 col-sm-10 col-md-8 col-lg-6">
@@ -52,17 +52,39 @@
           <div class="layer bottom"><div class="icing"></div></div>
         </div>
 
-        <!-- Birthday text below cake -->
+        <!-- Birthday Text -->
         <h1 class="birthday-text mt-4">Happy Birthday <span>Antonnete</span> 🎂</h1>
       </div>
     </div>
   </div>
 
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <audio src="birthday.mp3" autoplay loop></audio>
+
+  <!-- Audio autoplay (with fallback for interaction if blocked) -->
+  <audio id="birthday-audio" autoplay loop>
+    <source src="birthday.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+  <script>
+    // Try to play audio when page loads
+    window.addEventListener('DOMContentLoaded', function () {
+      const audio = document.getElementById('birthday-audio');
+      const playPromise = audio.play();
+
+      // If autoplay is blocked, wait for first user interaction
+      if (playPromise !== undefined) {
+        playPromise.catch(() => {
+          const clickToPlay = () => {
+            audio.play();
+            document.removeEventListener('click', clickToPlay);
+          };
+          document.addEventListener('click', clickToPlay);
+        });
+      }
+    });
+  </script>
 
 </body>
 </html>
-
-
-
