--- a/cake.html
+++ b/cake.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Happy Birthday Antonete</title>
+  <title>Happy Birthday Antonette</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center text-center min-vh-100">
@@ -53,7 +53,7 @@
         </div>
 
         <!-- Birthday Text -->
-        <h1 class="birthday-text mt-4">Happy Birthday <span>Antonnete</span> 🎂</h1>
+        <h1 class="birthday-text mt-4">Happy Birthday <span>Antonette</span> 🎂</h1>
       </div>
     </div>
   </div>
@@ -68,12 +68,11 @@
   </audio>
 
   <script>
-    // Try to play audio when page loads
+    // Attempt autoplay, fallback to first click
     window.addEventListener('DOMContentLoaded', function () {
       const audio = document.getElementById('birthday-audio');
       const playPromise = audio.play();
 
-      // If autoplay is blocked, wait for first user interaction
       if (playPromise !== undefined) {
         playPromise.catch(() => {
           const clickToPlay = () => {
