--- a/cake.html
+++ b/cake.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Happy Birthday Antonette</title>
+ <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center text-center min-vh-100">
@@ -87,3 +88,4 @@
 
 </body>
 </html>
+
