--- a/cake.html
+++ b/cake.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Happy Birthday Antonette</title>
- <link rel="stylesheet" href="styles.css">
+
+  <!-- Link to your custom styles -->
+  <link rel="stylesheet" href="styles.css">
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center text-center min-vh-100">
@@ -59,23 +63,24 @@
     </div>
   </div>
 
-  <!-- Bootstrap JS -->
+  <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Audio autoplay (with fallback for interaction if blocked) -->
+  <!-- Audio element -->
   <audio id="birthday-audio" autoplay loop>
     <source src="birthday.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
+  <!-- Audio autoplay fallback script -->
   <script>
-    // Attempt autoplay, fallback to first click
-    window.addEventListener('DOMContentLoaded', function () {
+    document.addEventListener('DOMContentLoaded', function () {
       const audio = document.getElementById('birthday-audio');
       const playPromise = audio.play();
 
       if (playPromise !== undefined) {
         playPromise.catch(() => {
+          // Fallback if autoplay is blocked
           const clickToPlay = () => {
             audio.play();
             document.removeEventListener('click', clickToPlay);
@@ -88,4 +93,3 @@
 
 </body>
 </html>
-
