--- a/cake.html
+++ b/cake.html
@@ -66,27 +66,38 @@
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Audio element -->
-  <audio id="birthday-audio" autoplay loop>
+  <!-- Audio element (with autoplay + muted initially for workaround) -->
+  <audio id="birthday-audio" autoplay loop muted>
     <source src="birthday.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
-  <!-- Audio autoplay fallback script -->
+  <!-- Audio autoplay workaround script -->
   <script>
-    document.addEventListener('DOMContentLoaded', function () {
+    window.addEventListener('DOMContentLoaded', function () {
       const audio = document.getElementById('birthday-audio');
+
+      // Try to play and unmute the audio
+      audio.muted = false;
+
       const playPromise = audio.play();
 
       if (playPromise !== undefined) {
-        playPromise.catch(() => {
-          // Fallback if autoplay is blocked
-          const clickToPlay = () => {
-            audio.play();
-            document.removeEventListener('click', clickToPlay);
-          };
-          document.addEventListener('click', clickToPlay);
-        });
+        playPromise
+          .then(() => {
+            console.log("Autoplay successful");
+          })
+          .catch((error) => {
+            console.warn("Autoplay blocked. Waiting for user interaction...");
+
+            // Wait for any user interaction, then play
+            const tryPlay = () => {
+              audio.play();
+              document.removeEventListener('click', tryPlay);
+            };
+
+            document.addEventListener('click', tryPlay);
+          });
       }
     });
   </script>
